--- a/HotelSysteem/Views/HotelKamerBedden/Delete.cshtml
+++ b/HotelSysteem/Views/HotelKamerBedden/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelSysteem.Models.Hotelkamer
+﻿@model HotelSysteem.Models.HotelKamerBed
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,20 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Hotelkamer</h4>
+    <h4>HotelKamerBed</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nummer)
+            @Html.DisplayNameFor(model => model.Omschrijving)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nummer)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VoorzieningenId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VoorzieningenId)
+            @Html.DisplayFor(model => model.Omschrijving)
         </dd>
     </dl>
     
