--- a/HotelSysteem/Views/HotelKamerBedden/Index.cshtml
+++ b/HotelSysteem/Views/HotelKamerBedden/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HotelSysteem.Models.Hotelkamer>
+﻿@model IEnumerable<HotelSysteem.Models.HotelKamerBed>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,10 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Nummer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VoorzieningenId)
+                @Html.DisplayNameFor(model => model.Omschrijving)
             </th>
             <th></th>
         </tr>
@@ -25,10 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Nummer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VoorzieningenId)
+                @Html.DisplayFor(modelItem => item.Omschrijving)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
